syntax = "proto3";

package trader;

option go_package = ".;trader";

service Trader {
    rpc MarketOrder (MarketOrderRequest) returns (MarketOrderResponse) {}
}

message MarketOrderRequest {
    string type = 1;
    string ticker = 2;
    float price = 3;
    int32 qty = 4;
}

message MarketOrderResponse {}